<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInActivity">

    <ImageView
        android:id="@+id/signUpAppLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/glimmerg_glide_reg"
        android:text="@string/app_name"
        android:textColor="@color/appColor"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpAppLogo"
        app:layout_constraintStart_toStartOf="@+id/signUpAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/signUpAppLogo" />

    <TextView
        android:id="@+id/loginSalogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/loginSalogan"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpAppName"
        app:layout_constraintStart_toStartOf="@+id/signUpAppName"
        app:layout_constraintTop_toBottomOf="@+id/signUpAppName"
        android:fontFamily="@font/lato_regular"/>
    <TextView
        android:id="@+id/signUpMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup_here"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginSalogan"
        app:layout_constraintStart_toStartOf="@+id/loginSalogan"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintTop_toBottomOf="@+id/loginSalogan"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/signUpNameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/signUpMsg"
        app:layout_constraintStart_toStartOf="@+id/signUpMsg"
        app:layout_constraintTop_toBottomOf="@+id/signUpMsg"
        android:fontFamily="@font/lato_regular"
        android:background="@drawable/edit_text"
        android:paddingLeft="10dp"
        android:elevation="5dp"

        />
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:ems="15"
        android:hint="@string/hintForEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:fontFamily="@font/lato_regular"
        android:background="@drawable/edit_text"
        android:paddingLeft="10dp"
        android:elevation="5dp"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/passInput"
        android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:layout_height="57dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:background="@drawable/edit_text"
        android:elevation="5dp"
        android:drawableRight="@drawable/seenpassword"
        android:paddingRight="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:background="@drawable/green_button_gradient"
        android:elevation="5dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_upBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passInput"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/or"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <TextView
        android:id="@+id/signUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/signup_with"
        android:textColor="@color/appColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/or"
        app:layout_constraintStart_toStartOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:drawableLeft="@drawable/googleicon"
        android:elevation="5dp"
        android:fontFamily="@font/lato_regular"
        android:paddingLeft="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWith"
        app:layout_goneMarginTop="18dp" />

    <TextView
        android:id="@+id/alreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/already_have_an_acount"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/googleLoginBtn"
        app:layout_constraintStart_toStartOf="@+id/googleLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginBtn" />




</androidx.constraintlayout.widget.ConstraintLayout>