<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="257dp"
        android:layout_height="257dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/food_mania_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_extra_bold"
        android:text="@string/quote"
        app:layout_constraintEnd_toEndOf="@+id/appName"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/lato_bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/appColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>