<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startActivity">

    <ImageView
        android:id="@+id/startImg"
        android:layout_width="257dp"
        android:layout_height="257dp"
        android:src="@drawable/food_mania_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/startPageQuote"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/startImg"
        app:layout_constraintStart_toStartOf="@+id/startImg"
        app:layout_constraintTop_toBottomOf="@+id/startImg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/green_button_gradient"
        android:elevation="18dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/designedBy"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/designedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/lato_bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/appColor"/>


</androidx.constraintlayout.widget.ConstraintLayout>