<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chooseLocationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/location"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/chooseYourLocText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/choose_your_location"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="24dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationDropDown"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@drawable/edit_text"
        app:endIconDrawable="@drawable/downarrow"
        app:endIconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/chooseYourLocText"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listOfLoc"
            android:inputType="none"
            android:text="@string/choose_location"
            android:fontFamily="@font/lato_regular"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/locDescrip"
        android:textAlignment="textStart"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>