<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#00f4f4f4"
            android:scaleType="centerCrop"
            android:src="@drawable/left_arror"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/detailFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/yeonsung_regular"
                android:text="@string/food_name"
                android:textAllCaps="false"
                android:textColor="@color/appColor"
                android:textSize="24sp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/detailFoodImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icecream" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/short_description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_regular"
            android:text="Succulent beef patty smothered in melted Swiss cheese and sautéed mushrooms, complemented with crisp lettuce, juicy tomato, and savory garlic aioli on a toasted artisanal bun." />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/ingredient"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_regular"
            android:text="Multiple Ingredients" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"

            android:layout_marginBottom="8dp"
            android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detailAddToCartBtn"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/green_button_gradient"
            android:elevation="5dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>