<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foodImagePopular"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/food1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/foodNamePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/glimmerg_glide_reg"
                android:text="@string/food_name"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/foodImagePopular"
                app:layout_constraintStart_toEndOf="@+id/foodImagePopular"
                app:layout_constraintTop_toTopOf="@+id/foodImagePopular"
                app:layout_constraintVertical_bias="0.241" />

            <TextView
                android:id="@+id/itemPricePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="51dp"
                android:fontFamily="@font/yeonsung_regular"
                android:text="@string/paisa"
                android:textColor="@color/appColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.992"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/menuAddToCart"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/add_to_cart_button"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/itemPricePopular"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="@+id/itemPricePopular"
                app:layout_constraintTop_toBottomOf="@+id/itemPricePopular"
                app:layout_constraintVertical_bias="0.714" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

